--- a/assets/package.json
+++ b/assets/package.json
@@ -4,9 +4,13 @@
     "version": "0.1.0",
     "repository": {
         "type": "git",
-        "url": "https://gitlab.com/norex/bond"
+        "url": "https://github.com/JBValo/bond"
     },
     "license": "CC-BY-4.0",
+    "engines": {
+        "npm": ">=6.1.0",
+        "node": ">=10.5.0"
+    },
     "devDependencies": {
         "autoprefixer": "^8.1.0",
         "cssnano": "latest",
@@ -37,18 +41,21 @@
         "slick": "cp node_modules/slick-carousel/slick/slick.css vendor/ && cp node_modules/slick-carousel/slick/slick.js vendor/ && cp node_modules/slick-carousel/slick/slick-theme.css vendor/",
         "datepicker": "cp node_modules/pikaday/pikaday.js vendor/ && cp node_modules/pikaday/css/pikaday.css vendor/",
         "select2": "cp node_modules/select2/dist/js/select2.min.js vendor/ && cp node_modules/select2/dist/css/select2.min.css vendor/",
-        "bond": "yarn install && rm -rf vendor && mkdir vendor && npm run jquery && npm run matchMedia && npm run modernizr && npm run normalize && npm run slick && npm run datepicker && npm run select2",
+        "lazyload": "cp node_modules/vanilla-lazyload/dist/lazyload.min.js vendor/",
+        "bond": "yarn install && rm -rf vendor && mkdir vendor && npm run jquery && npm run matchMedia && npm run modernizr && npm run normalize && npm run slick && npm run datepicker && npm run select2 && npm run lazyload",
         "notify": "node notify.js",
         "post": "postcss post/*.css -c postcss.config.js -d css && node notify.js",
         "watch": "npm-watch"
     },
     "dependencies": {
+        "critical": "^1.3.4",
         "jquery": "^3.2.1",
         "match-media": "^0.2.0",
         "modernizr": "^3.5.0",
         "normalize.css": "^7.0.0",
         "pikaday": "^1.6.1",
         "select2": "^4.0.3",
-        "slick-carousel": "^1.6.0"
+        "slick-carousel": "^1.6.0",
+        "vanilla-lazyload": "^8.11.0"
     }
 }
