--- a/assets/package.json
+++ b/assets/package.json
@@ -17,7 +17,7 @@
         "node-notifier": "^5.2.1",
         "npm-watch": "^0.3.0",
         "postcss-cli": "^5.0.0",
-        "postcss-color-function": "^4.0.1",
+        "postcss-color-mod-function": "^2.4.3",
         "postcss-import": "^11.1.0",
         "postcss-mixins": "^6.2.0",
         "postcss-nested": "^3.0.0",
