updating comment readability, adding lazyload to gallery

--- a/assets/package.json
+++ b/assets/package.json
@@ -52,7 +52,7 @@
         "jquery": "^3.2.1",
         "match-media": "^0.2.0",
         "modernizr": "^3.5.0",
-        "normalize.css": "^7.0.0",
+        "normalize.css": "latest",
         "pikaday": "^1.6.1",
         "select2": "^4.0.3",
         "slick-carousel": "^1.6.0",
