--- a/assets/package.json
+++ b/assets/package.json
@@ -12,17 +12,17 @@
         "node": ">=10.5.0"
     },
     "devDependencies": {
-        "autoprefixer": "latest",
-        "cssnano": "latest",
-        "node-notifier": "latest",
+        "autoprefixer": "^9.7.6",
+        "cssnano": "^4.1.10",
+        "node-notifier": "^7.0.0",
         "npm-watch": "latest",
-        "postcss-cli": "latest",
+        "postcss-cli": "^7.1.1",
         "postcss-color-mod-function": "latest",
         "postcss-import": "latest",
-        "postcss-mixins": "latest",
-        "postcss-nested": "latest",
+        "postcss-mixins": "^6.2.3",
+        "postcss-nested": "^4.2.1",
         "postcss-responsive-type": "latest",
-        "postcss-simple-vars": "latest"
+        "postcss-simple-vars": "^5.0.2"
     },
     "watch": {
         "post": {
@@ -48,12 +48,12 @@
         "watch": "npm-watch"
     },
     "dependencies": {
+        "hc-sticky": "latest",
         "jquery": "latest",
         "match-media": "latest",
         "modernizr": "latest",
         "normalize.css": "latest",
-        "select2": "latest",
-        "hc-sticky": "latest",
+        "select2": "^4.0.13",
         "slick-carousel": "latest",
         "vanilla-lazyload": "latest"
     }
