--- a/assets/package.json
+++ b/assets/package.json
@@ -52,9 +52,9 @@
         "jquery": "latest",
         "match-media": "latest",
         "modernizr": "latest",
-        "normalize.css": "latest",
+        "normalize.css": "^8.0.1",
         "select2": "^4.0.13",
         "slick-carousel": "latest",
-        "vanilla-lazyload": "latest"
+        "vanilla-lazyload": "^15.2.0"
     }
 }
