partials and post compile working

--- a/src/package.json
+++ b/src/package.json
@@ -12,20 +12,20 @@
         "node": ">=10.5.0"
     },
     "devDependencies": {
-        "autoprefixer": "^9.7.6",
+        "autoprefixer": "^9.8.6",
         "browser-sync": "^2.26.13",
         "cssnano": "^4.1.10",
         "gulp": "^4.0.2",
         "gulp-file-include": "^2.2.2",
         "gulp-postcss": "^9.0.0",
         "gulp-watch": "^5.0.1",
-        "node-notifier": "^7.0.0",
+        "node-notifier": "^7.0.2",
         "npm-watch": "latest",
-        "postcss-cli": "^7.1.1",
+        "postcss-cli": "^8.1.0",
         "postcss-color-mod-function": "latest",
-        "postcss-import": "latest",
+        "postcss-import": "^12.0.1",
         "postcss-mixins": "^6.2.3",
-        "postcss-nested": "^4.2.1",
+        "postcss-nested": "^4.2.3",
         "postcss-responsive-type": "latest",
         "postcss-simple-vars": "^5.0.2"
     },
